Kubernetes_3Master_2Node_CFormation.yaml
#####################################
###Change Region Maps as required###
###Change CidrBlock for VPC#########
###Change Subnet block in correlation with VPC####

AWSTemplateFormatVersion: '2010-09-09'
Metadata: {}

Parameters:
###########
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
  AvailabilityZone:
    Description: Availability zone to deploy
    Type: AWS::EC2::AvailabilityZone::Name

Mappings:
#########
  RegionMap:
    us-west-2:
      Ubuntu16: "ami-1ee65166"
    us-west-2:
      Ubuntu16: "ami-1ee65166"

Resources:
##########
  kubernetesvpc:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.0.0.0/28
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: kubernetes-vpc

  internetgatewayos:
    Type: AWS::EC2::InternetGateway

  gatewayattachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref internetgatewayos
      VpcId: !Ref kubernetesvpc

  subnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref kubernetesvpc
      CidrBlock: 10.0.0.0/28
      AvailabilityZone: !Ref AvailabilityZone

  routetable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref kubernetesvpc

  subnetroutetableasoc:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
     RouteTableId: !Ref routetable
     SubnetId: !Ref subnet

  route:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref routetable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref internetgatewayos

  kubernetesmaster1:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
      - Key: Name
        Value: kuberenetes-master1
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      AvailabilityZone: !Ref AvailabilityZone
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref subnet
          GroupSet:
             - !Ref mastersecgroup
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Ubuntu16]

  kubernetesmaster2:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
      - Key: Name
        Value: kuberenetes-master2
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      AvailabilityZone: !Ref AvailabilityZone
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref subnet
          GroupSet:
             - !Ref mastersecgroup
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Ubuntu16]

  kubernetesmaster3:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
      - Key: Name
        Value: kuberenetes-master3
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      AvailabilityZone: !Ref AvailabilityZone
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref subnet
          GroupSet:
             - !Ref mastersecgroup
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Ubuntu16]

  kubernetesnode1:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
      - Key: Name
        Value: kubernetes-node1
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      AvailabilityZone: !Ref AvailabilityZone
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref subnet
          GroupSet:
             - !Ref workersecgroup
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Ubuntu16]

  kubernetesnode2:
    Type: 'AWS::EC2::Instance'
    Properties:
      Tags:
      - Key: Name
        Value: kubernetes-node2
      InstanceType: t2.medium
      KeyName: !Ref KeyName
      AvailabilityZone: !Ref AvailabilityZone
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref subnet
          GroupSet:
           - !Ref workersecgroup
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", Ubuntu16]

  volume1:
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !GetAtt kubernetesmaster1.AvailabilityZone
      Size: 50
    DeletionPolicy: Delete

  volat1:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: '/dev/xvdb'
      VolumeId: !Ref volume1
      InstanceId: !Ref kubernetesmaster1

  volume2:
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !GetAtt kubernetesmaster2.AvailabilityZone
      Size: 50
    DeletionPolicy: Delete

  volat2:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: '/dev/xvdb'
      VolumeId: !Ref volume2
      InstanceId: !Ref kubernetesmaster2

  volume3:
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !GetAtt kubernetesmaster3.AvailabilityZone
      Size: 50
    DeletionPolicy: Delete

  volat3:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: '/dev/xvdb'
      VolumeId: !Ref volume3
      InstanceId: !Ref kubernetesmaster3

  volume4:
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !GetAtt kubernetesnode1.AvailabilityZone
      Size: 50
    DeletionPolicy: Delete

  volat4:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: '/dev/xvdb'
      VolumeId: !Ref volume4
      InstanceId: !Ref kubernetesnode1

  volume5:
    Type: 'AWS::EC2::Volume'
    Properties:
      AvailabilityZone: !GetAtt kubernetesnode2.AvailabilityZone
      Size: 50
    DeletionPolicy: Delete

  volat5:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      Device: '/dev/xvdb'
      VolumeId: !Ref volume5
      InstanceId: !Ref kubernetesnode2

  workersecgroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref kubernetesvpc
      GroupDescription: Security group for the Kubernetes nodes
      SecurityGroupIngress:
      - IpProtocol: -1
        FromPort: -1
        ToPort: -1
        CidrIp: 10.0.0.0/28
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0

  mastersecgroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref kubernetesvpc
      GroupDescription: Security group for the master Kubernetes node
      SecurityGroupIngress:
      - IpProtocol: -1
        FromPort: -1
        ToPort: -1
        CidrIp: 10.0.0.0/28
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '6443'
        ToPort: '6443'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '10250'
        ToPort: '10250'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '8080'
        ToPort: '8080'
        CidrIp: 0.0.0.0/0
